chore: added code for next app show users from json placeholder api

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,10 @@
 }
 
 body {
+  max-width: 800px;
+  margin: 0 auto;
+  overflow-x: hidden;
+  padding: 10px;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
